# PIAIC-Q3-Assignment-1

./: README.md  pyproject.toml
restapi/: main.py
